@@ -17,6 +17,7 @@
 
 package org.dockbox.hartshorn.di.services;
 
+import org.dockbox.hartshorn.api.domain.Exceptional;
 import org.dockbox.hartshorn.di.annotations.Service;
 import org.dockbox.hartshorn.util.Reflect;
 import org.dockbox.hartshorn.util.HartshornUtils;
@@ -39,11 +40,13 @@ public class SimpleServiceLocator implements ServiceLocator {
                     .map(ServiceContainer::getType)
                     .collect(Collectors.toList());
         }
-        final Collection<Class<?>> types = Reflect.annotatedTypes(prefix, Service.class);
+        final Collection<Class<?>> types = Reflect.types(Service.class);
 
         final List<ServiceContainer> containers = types.stream()
                 .map(SimpleServiceContainer::new)
-                .collect(Collectors.toList());
+                .filter(SimpleServiceContainer::enabled)
+                .map(ServiceContainer.class::cast)
+                .toList();
         SimpleServiceLocator.cache.put(prefix, containers);
 
         return HartshornUtils.asUnmodifiableCollection(types);
@@ -51,6 +54,15 @@ public class SimpleServiceLocator implements ServiceLocator {
 
     @Override
     public Collection<ServiceContainer> containers() {
-        return cache.entrySet().stream().flatMap(a -> a.getValue().stream()).collect(Collectors.toList());
+        return cache.entrySet().stream().flatMap(a -> a.getValue().stream()).toList();
+    }
+
+    @Override
+    public Exceptional<ServiceContainer> container(Class<?> type) {
+        return Exceptional.of(this.containers()
+                .stream()
+                .filter(container -> container.getType().equals(type))
+                .findFirst()
+        );
     }
 }
