@@ -20,18 +20,15 @@ package org.dockbox.hartshorn.util;
 import org.dockbox.hartshorn.api.domain.Exceptional;
 import org.dockbox.hartshorn.api.entity.annotations.Entity;
 import org.dockbox.hartshorn.api.entity.annotations.Property;
-import org.dockbox.hartshorn.util.exceptions.EnumException;
 import org.dockbox.hartshorn.util.exceptions.FieldAccessException;
 import org.dockbox.hartshorn.util.exceptions.NotPrimitiveException;
 import org.dockbox.hartshorn.util.exceptions.TypeConversionException;
-import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Unmodifiable;
 import org.reflections.Reflections;
 
 import java.lang.annotation.Annotation;
-import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodHandles.Lookup;
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Constructor;
@@ -43,7 +40,6 @@ import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Proxy;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -55,8 +51,12 @@ import java.util.function.Predicate;
 
 import javassist.util.proxy.ProxyFactory;
 
+import static org.joor.Reflect.on;
+
 @SuppressWarnings({ "unused", "OverlyComplexClass" })
 public final class Reflect {
+
+    protected static PrefixContext context;
 
     private static final Map<String, Reflections> reflectedPrefixes = HartshornUtils.emptyConcurrentMap();
     private static final Map<Class<?>, Class<?>> primitiveWrapperMap = HartshornUtils.ofEntries(
@@ -86,38 +86,30 @@ public final class Reflect {
             byte[].class, int[].class, long[].class,
             String.class, List.class, Map.class);
 
-    private static final String serverClassName = "org.dockbox.hartshorn.server.Server";
-
     private static Lookup LOOKUP;
 
     private Reflect() {}
 
-    @SuppressWarnings("unchecked")
-    public static <T> Exceptional<T> fieldValue(Class<?> fieldHolder, Object instance, String field, Class<T> expectedType) {
-        try {
-            Field declaredField = fieldHolder.getDeclaredField(field);
-            declaredField.setAccessible(true);
-            return (Exceptional<T>) fieldValue(declaredField, instance);
-        }
-        catch (ClassCastException | ReflectiveOperationException e) {
-            return Exceptional.of(e);
-        }
+    private static PrefixContext context() {
+        // Will throw a NoSuchElementException if the context has not been initialized
+        return Exceptional.of(context).get();
     }
 
-    public static Exceptional<?> fieldValue(Field field, Object instance) {
-        field.setAccessible(true);
-        if (field.isAnnotationPresent(Property.class)) {
-            Property property = field.getAnnotation(Property.class);
-            if (!property.getter().equals("")) {
-                return runMethod(instance, property.getter(), field.getType());
+    public static <T> Exceptional<T> field(Object instance, String field) {
+        if (instance == null) return Exceptional.empty();
+        try {
+            Field reflectedField = instance.getClass().getDeclaredField(field);
+            if (reflectedField.isAnnotationPresent(Property.class)) {
+                Property property = reflectedField.getAnnotation(Property.class);
+                if (!"".equals(property.getter())) {
+                    return run(instance, property.getter());
+                }
             }
         }
-        try {
-            return Exceptional.of(field.get(instance));
-        }
-        catch (IllegalAccessException | IllegalArgumentException e) {
+        catch (NoSuchFieldException e) {
             return Exceptional.of(e);
         }
+        return Exceptional.of(() -> on(instance).field(field).get());
     }
 
     /**
@@ -132,71 +124,13 @@ public final class Reflect {
      *         The instance to call the method on
      * @param method
      *         The method to call
-     * @param expectedType
-     *         The type of the expected return value
      * @param args
      *         The arguments which are provided to the method call
      *
      * @return The result of the method call, wrapped in {@link Exceptional}
      */
-    public static <T> Exceptional<T> runMethod(Object instance, String method, Class<T> expectedType, Object... args) {
-        Class<?>[] argTypes = new Class<?>[args.length];
-        for (int i = 0; i < args.length; i++) {
-            argTypes[i] = args[i].getClass();
-        }
-        return Reflect.runMethod(
-                instance.getClass(), instance, method, expectedType, argTypes, args);
-    }
-
-    /**
-     * Attempts to get the return value of a method which may not be publicly accessible (e.g.
-     * protected or private). If the method does not exist, or throws a exception the caught is wrapped
-     * in a {@link Exceptional}. Otherwise the (nullable) return value is returned wrapped in a {@link
-     * Exceptional}.
-     *
-     * @param <T>
-     *         The type of the expected return value
-     * @param methodHolder
-     *         The type to call the method on
-     * @param instance
-     *         The instance to call the method with
-     * @param method
-     *         The method to call
-     * @param expectedType
-     *         The type of the expected return value
-     * @param argumentTypes
-     *         The types of the arguments, used to collect the appropriate method
-     * @param args
-     *         The arguments which are provided to the method call
-     *
-     * @return The result of the method call, wrapped in {@link Exceptional}
-     */
-    @SuppressWarnings("unchecked")
-    public static <T> Exceptional<T> runMethod(
-            Class<?> methodHolder,
-            Object instance,
-            String method,
-            Class<T> expectedType,
-            Class<?>[] argumentTypes,
-            Object... args
-    ) {
-        try {
-            Method m = methodHolder.getDeclaredMethod(method, argumentTypes);
-            m.setAccessible(true);
-            T value = (T) m.invoke(instance, args);
-            return Exceptional.of(value);
-        }
-        catch (ClassCastException
-                | NoSuchMethodException
-                | InvocationTargetException
-                | IllegalAccessException e) {
-            return Exceptional.of(e);
-        }
-    }
-
-    @Contract("null, _ -> false; !null, null -> false")
-    public static <T> boolean isGenericInstanceOf(T instance, Class<?> type) {
-        return null != instance && Reflect.assignableFrom(type, instance.getClass());
+    public static <T> Exceptional<T> run(Object instance, String method, Object... args) {
+        return Exceptional.of(() -> on(instance).call(method, args).get());
     }
 
     /**
@@ -207,10 +141,10 @@ public final class Reflect {
      * all of the following assignabilities return true:
      *
      * <pre>{@code
-     * HartshornUtils.assignableFrom(int.class, Integer.class);
-     * HartshornUtils.assignableFrom(Integer.class, int.class);
-     * HartshornUtils.assignableFrom(int.class, int.class);
-     * HartshornUtils.assignableFrom(Number.class, Integer.class);
+     * HartshornUtils.assigns(int.class, Integer.class);
+     * HartshornUtils.assigns(Integer.class, int.class);
+     * HartshornUtils.assigns(int.class, int.class);
+     * HartshornUtils.assigns(Number.class, Integer.class);
      *
      * }</pre>
      *
@@ -221,9 +155,9 @@ public final class Reflect {
      *
      * @return true if {@code to} is equal to-, a super type of, or a primitive wrapper of {@code
      *         from}
-     * @see Reflect#isPrimitiveWrapper(Class, Class)
+     * @see Reflect#primitive(Class, Class)
      */
-    public static boolean assignableFrom(Class<?> to, Class<?> from) {
+    public static boolean assigns(Class<?> to, Class<?> from) {
         if (null == to || null == from) return false;
         //noinspection ConstantConditions
         if (to == from || to.equals(from)) return true;
@@ -232,10 +166,10 @@ public final class Reflect {
             return true;
         }
         if (from.isPrimitive()) {
-            return Reflect.isPrimitiveWrapper(to, from);
+            return Reflect.primitive(to, from);
         }
         if (to.isPrimitive()) {
-            return Reflect.isPrimitiveWrapper(from, to);
+            return Reflect.primitive(from, to);
         }
         return false;
     }
@@ -250,7 +184,7 @@ public final class Reflect {
      *
      * @return true if {@code targetClass} is a primitive wrapper of {@code primitive}.
      */
-    public static boolean isPrimitiveWrapper(Class<?> targetClass, Class<?> primitive) {
+    public static boolean primitive(Class<?> targetClass, Class<?> primitive) {
         if (!primitive.isPrimitive()) {
             throw new IllegalArgumentException("First argument has to be primitive type");
         }
@@ -259,8 +193,8 @@ public final class Reflect {
 
     @NotNull
     @Unmodifiable
-    public static <A extends Annotation> Collection<Method> annotatedMethods(Class<?> clazz, Class<A> annotation) {
-        return Reflect.annotatedMethods(clazz, annotation, t -> true);
+    public static <A extends Annotation> Collection<Method> methods(Class<?> clazz, Class<A> annotation) {
+        return Reflect.methods(clazz, annotation, t -> true);
     }
 
     /**
@@ -281,8 +215,8 @@ public final class Reflect {
      */
     @NotNull
     @Unmodifiable
-    public static <A extends Annotation> Collection<Method> annotatedMethods(Class<?> clazz, Class<A> annotation, Predicate<A> rule) {
-        return Reflect.annotatedMethods(clazz, annotation, rule, false);
+    public static <A extends Annotation> Collection<Method> methods(Class<?> clazz, Class<A> annotation, Predicate<A> rule) {
+        return Reflect.methods(clazz, annotation, rule, false);
     }
 
     /**
@@ -306,11 +240,10 @@ public final class Reflect {
      */
     @NotNull
     @Unmodifiable
-    public static <A extends Annotation> Collection<Method> annotatedMethods(Class<?> clazz, Class<A> annotation, Predicate<A> rule, boolean skipParents) {
+    public static <A extends Annotation> Collection<Method> methods(Class<?> clazz, Class<A> annotation, Predicate<A> rule, boolean skipParents) {
         List<Method> annotatedMethods = HartshornUtils.emptyList();
         for (Method method : HartshornUtils.asList(skipParents ? clazz.getMethods() : clazz.getDeclaredMethods())) {
-            // TODO: Confirm relevance
-            // if (!method.isAccessible()) method.setAccessible(true);
+            method.setAccessible(true);
             if (method.isAnnotationPresent(annotation) && rule.test(method.getAnnotation(annotation))) {
                 annotatedMethods.add(method);
             }
@@ -325,15 +258,13 @@ public final class Reflect {
      *
      * @param <A>
      *         The annotation constraint
-     * @param prefix
-     *         The package prefix
      * @param annotation
      *         The annotation expected to be present on one or more types
      *
      * @return The annotated types
      */
-    public static <A extends Annotation> Collection<Class<?>> annotatedTypes(String prefix, Class<A> annotation) {
-        return Reflect.annotatedTypes(prefix, annotation, false);
+    public static <A extends Annotation> Collection<Class<?>> types(Class<A> annotation) {
+        return context.types(annotation);
     }
 
     /**
@@ -343,8 +274,6 @@ public final class Reflect {
      *
      * @param <A>
      *         The annotation constraint
-     * @param prefix
-     *         The package prefix
      * @param annotation
      *         The annotation expected to be present on one or more types
      * @param skipParents
@@ -352,25 +281,14 @@ public final class Reflect {
      *
      * @return The annotated types
      */
-    public static <A extends Annotation> Collection<Class<?>> annotatedTypes(String prefix, Class<A> annotation, boolean skipParents) {
-        Reflections reflections = reflectionsFromPrefix(prefix);
-        Set<Class<?>> types = reflections.getTypesAnnotatedWith(annotation, !skipParents);
-        return HartshornUtils.asList(types);
-    }
-
-    private static Reflections reflectionsFromPrefix(String prefix) {
-        if (!reflectedPrefixes.containsKey(prefix)) {
-            reflectedPrefixes.put(prefix, new Reflections(prefix));
-        }
-        return reflectedPrefixes.get(prefix);
+    public static <A extends Annotation> Collection<Class<?>> types(Class<A> annotation, boolean skipParents) {
+        return context.types(annotation, skipParents);
     }
 
     /**
      * Gets all sub-types of a given type. The prefix is typically a package. If no sub-types exist
      * for the given type, and empty list is returned.
      *
-     * @param prefix
-     *         The package prefix
      * @param parent
      *         The parent type to scan for subclasses
      * @param <T>
@@ -378,24 +296,8 @@ public final class Reflect {
      *
      * @return The list of sub-types, or a empty list
      */
-    public static <T> Collection<Class<? extends T>> subTypes(String prefix, Class<T> parent) {
-        Reflections reflections = reflectionsFromPrefix(prefix);
-        Set<Class<? extends T>> subTypes = reflections.getSubTypesOf(parent);
-        return HartshornUtils.asList(subTypes);
-    }
-
-    /**
-     * Is either assignable from boolean.
-     *
-     * @param to
-     *         the to
-     * @param from
-     *         the from
-     *
-     * @return the boolean
-     */
-    public static boolean eitherAssignsFrom(Class<?> to, Class<?> from) {
-        return Reflect.assignableFrom(from, to) || Reflect.assignableFrom(to, from);
+    public static <T> Collection<Class<? extends T>> children(Class<T> parent) {
+        return context.children(parent);
     }
 
     /**
@@ -418,30 +320,6 @@ public final class Reflect {
     }
 
     /**
-     * Gets enum values.
-     *
-     * @param type
-     *         the type
-     *
-     * @return the enum values
-     */
-    public static Collection<? extends Enum<?>> enumValues(Class<?> type) {
-        if (!type.isEnum()) return HartshornUtils.emptyList();
-        Collection<Enum<?>> constants = HartshornUtils.emptyList();
-        try {
-            Field f = type.getDeclaredField("$VALUES");
-            f.setAccessible(true);
-            Object o = f.get(null);
-            Enum<?>[] e = (Enum<?>[]) o;
-            constants.addAll(Arrays.asList(e));
-        }
-        catch (IllegalAccessException | IllegalArgumentException | NoSuchFieldException | SecurityException | ClassCastException e) {
-            throw new EnumException("Cannot access enum " + type.getCanonicalName(), e);
-        }
-        return constants;
-    }
-
-    /**
      * Is annotation present recursively boolean.
      *
      * @param <T>
@@ -455,7 +333,7 @@ public final class Reflect {
      * @throws SecurityException
      *         the security exception
      */
-    public static <T extends Annotation> boolean hasAnnotation(Method method, Class<T> annotationClass) throws SecurityException {
+    public static <T extends Annotation> boolean has(Method method, Class<T> annotationClass) throws SecurityException {
         return null != Reflect.annotation(method, annotationClass);
     }
 
@@ -480,7 +358,7 @@ public final class Reflect {
             final Class<?>[] params = method.getParameterTypes();
 
             Class<?> declaringClass = method.getDeclaringClass();
-            for (Class<?> supertype : Reflect.superTypes(declaringClass)) {
+            for (Class<?> supertype : Reflect.parents(declaringClass)) {
                 try {
                     Method m = supertype.getDeclaredMethod(name, params);
 
@@ -505,7 +383,7 @@ public final class Reflect {
      *
      * @return the supertypes
      */
-    public static Collection<Class<?>> superTypes(Class<?> current) {
+    public static Collection<Class<?>> parents(Class<?> current) {
         Set<Class<?>> supertypes = HartshornUtils.emptySet();
         Set<Class<?>> next = HartshornUtils.emptySet();
         Class<?> superclass = current.getSuperclass();
@@ -521,7 +399,7 @@ public final class Reflect {
         }
 
         for (Class<?> cls : next) {
-            supertypes.addAll(Reflect.superTypes(cls));
+            supertypes.addAll(Reflect.parents(cls));
         }
 
         return supertypes;
@@ -552,7 +430,7 @@ public final class Reflect {
             while (Object.class != (current = current.getSuperclass()) && null != current);
 
             // Guava equivalent:       Lists.transform(set, w -> w.method);
-            // Stream API equivalent:  set.stream().map(w -> w.method).collect(Collectors.toList());
+            // Stream API equivalent:  set.stream().map(w -> w.method).toList();
             List<Method> result = HartshornUtils.emptyList();
             for (InternalMethodWrapper methodWrapper : set) result.add(methodWrapper.method);
             return result;
@@ -560,10 +438,6 @@ public final class Reflect {
         catch (Throwable e) {
             return HartshornUtils.emptyList();
         }
-    }
-
-    public static boolean serverAvailable() {
-        return lookup(serverClassName) != null;
     }
 
     public static Class<?> lookup(String className) {
@@ -575,38 +449,6 @@ public final class Reflect {
         }
     }
 
-    /**
-     * Gets field property name.
-     *
-     * @param field
-     *         the field
-     *
-     * @return the field property name
-     */
-    public static String fieldName(Field field) {
-        if (field.isAnnotationPresent(Property.class)) {
-            String name = field.getAnnotation(Property.class).value();
-            if (!"".equals(name)) return name;
-        }
-        return field.getName();
-    }
-
-    private static <T> boolean canUseSetter(Class<T> type, T instance, Field field, Object value)
-            throws NoSuchMethodException, IllegalAccessException, InvocationTargetException {
-        if (field.isAnnotationPresent(Property.class)) {
-            Property property = field.getAnnotation(Property.class);
-
-            if (!property.setter().isEmpty() && Reflect.hasMethod(type, property.setter())) {
-                Class<?> parameterType = field.getType();
-                if (Reflect.isNotVoid(property.accepts())) parameterType = property.accepts();
-
-                Method method = type.getMethod(property.setter(), parameterType);
-                method.invoke(instance, value);
-                return true;
-            }
-        }
-        return false;
-    }
 
     /**
      * Returns true if a type has a declared method of which the name equals the value of {@code
@@ -619,7 +461,7 @@ public final class Reflect {
      *
      * @return true if the type has a declared method which matches {@code method}
      */
-    public static boolean hasMethod(Class<?> type, @NonNls String method) {
+    public static boolean has(Class<?> type, @NonNls String method) {
         for (Method m : type.getDeclaredMethods()) {
             if (m.getName().equals(method)) return true;
         }
@@ -634,8 +476,8 @@ public final class Reflect {
      *
      * @return the boolean
      */
-    public static boolean isNotVoid(Class<?> type) {
-        return !(type.equals(Void.class) || type == Void.TYPE);
+    public static boolean notVoid(Class<?> type) {
+        return !(type == null || type.equals(Void.class) || type == Void.TYPE);
     }
 
     /**
@@ -649,8 +491,8 @@ public final class Reflect {
      *
      * @return true if the type of the instance has a declared method which matches {@code method}
      */
-    public static boolean hasMethod(Object instance, String method) {
-        return Reflect.hasMethod(instance.getClass(), method);
+    public static boolean has(Object instance, String method) {
+        return Reflect.has(instance.getClass(), method);
     }
 
     public static boolean hasField(Class<?> type, String field) {
@@ -710,16 +552,16 @@ public final class Reflect {
         }
     }
 
-    public static Collection<Field> annotatedFields(Class<?> type, Class<? extends Annotation> annotation) {
+    public static Collection<Field> fields(Class<?> type, Class<? extends Annotation> annotation) {
         Collection<Field> fields = new ArrayList<>();
         for (Field declaredField : type.getDeclaredFields()) {
             if (declaredField.isAnnotationPresent(annotation)) fields.add(declaredField);
         }
-        if (type.getSuperclass() != null) fields.addAll(annotatedFields(type.getSuperclass(), annotation));
+        if (type.getSuperclass() != null) fields.addAll(fields(type.getSuperclass(), annotation));
         return fields;
     }
 
-    public static <T> Collection<Constructor<T>> annotatedConstructors(Class<T> type, Class<? extends Annotation> annotation) {
+    public static <T> Collection<Constructor<T>> constructors(Class<T> type, Class<? extends Annotation> annotation) {
         Collection<Constructor<T>> constructors = HartshornUtils.emptyList();
         //noinspection unchecked
         for (Constructor<T> constructor : (Constructor<T>[]) type.getDeclaredConstructors()) {
@@ -730,8 +572,8 @@ public final class Reflect {
 
     public static boolean isNative(Class<?> type) {
         boolean supportedType = false;
-        for (Class<?> nbtSupportedType : nativeSupportedTypes) {
-            if (assignableFrom(nbtSupportedType, type)) {
+        for (Class<?> nativeType : nativeSupportedTypes) {
+            if (assigns(nativeType, type)) {
                 supportedType = true;
                 break;
             }
@@ -739,51 +581,12 @@ public final class Reflect {
         return supportedType;
     }
 
-    public static Class<?> getServerClass() {
-        return lookup(serverClassName);
-    }
-
-    @SuppressWarnings("unchecked")
-    public static <T> Exceptional<T> runMethod(
-            Class<?> methodHolder,
-            Object instance,
-            String method,
-            Class<T> expectedType) {
-        try {
-            Method m = methodHolder.getDeclaredMethod(method);
-            m.setAccessible(true);
-            T value = (T) m.invoke(instance);
-            return Exceptional.of(value);
-        }
-        catch (ClassCastException
-                | NoSuchMethodException
-                | InvocationTargetException
-                | IllegalAccessException e) {
-            return Exceptional.of(e);
-        }
-    }
-
     public static boolean isProxy(Object o) {
         return o != null && (ProxyFactory.isProxyClass(o.getClass()) || Proxy.isProxyClass(o.getClass()));
     }
 
-    public static Lookup getTrustedLookup(Class<?> in) {
-        if (Reflect.LOOKUP == null) {
-            try {
-                final Lookup original = MethodHandles.lookup();
-                final Field internal = Lookup.class.getDeclaredField("IMPL_LOOKUP");
-                internal.setAccessible(true);
-                Reflect.LOOKUP = (Lookup) internal.get(original);
-            }
-            catch (NoSuchFieldException | IllegalAccessException e) {
-                throw new RuntimeException("Could not access trusted lookup", e);
-            }
-        }
-        return Reflect.LOOKUP.in(in);
-    }
-
     @SuppressWarnings({ "unchecked", "rawtypes" })
-    public static <T> T primitiveFromString(Class<?> type, String value) throws TypeConversionException {
+    public static <T> T toPrimitive(Class<?> type, String value) throws TypeConversionException {
         try {
             if (type.isEnum()) {
                 return (T) Enum.valueOf((Class<? extends Enum>) type, String.valueOf(value).toUpperCase());
@@ -791,7 +594,7 @@ public final class Reflect {
             else {
                 if (!type.isPrimitive()) {
                     for (Entry<Class<?>, Class<?>> entry : primitiveWrapperMap.entrySet()) {
-                        if (isPrimitiveWrapper(type, entry.getKey())) type = entry.getKey();
+                        if (primitive(type, entry.getKey())) type = entry.getKey();
                     }
                 }
                 if (!type.isPrimitive()) throw new NotPrimitiveException(type);
@@ -806,18 +609,18 @@ public final class Reflect {
         }
     }
 
-    public static List<Field> fieldsWithSuper(Class<?> type, Class<?> superType) {
+    public static List<Field> fieldsLike(Class<?> type, Class<?> superType) {
         Set<Field> fields = HartshornUtils.emptySet();
         for (Field staticField : staticFields(type)) {
-            if (Reflect.assignableFrom(superType, staticField.getType())) fields.add(staticField);
+            if (Reflect.assigns(superType, staticField.getType())) fields.add(staticField);
         }
         fields(type, ($, field) -> {
-            if (Reflect.assignableFrom(superType, field.getType())) fields.add(field);
+            if (Reflect.assigns(superType, field.getType())) fields.add(field);
         });
         return HartshornUtils.asUnmodifiableList(fields);
     }
 
-    public static List<Annotation> annotatedAnnotations(Class<?> type, Class<? extends Annotation> annotation) {
+    public static List<Annotation> annotations(Class<?> type, Class<? extends Annotation> annotation) {
         List<Annotation> annotations = HartshornUtils.emptyList();
         for (Annotation typeAnnotation : type.getAnnotations()) {
             if (typeAnnotation.annotationType().isAnnotationPresent(annotation)) {
@@ -831,7 +634,7 @@ public final class Reflect {
         return type.isInterface() || Modifier.isAbstract(type.getModifiers());
     }
 
-    public static Exceptional<Type> genericTypeParameter(Class<?> type, int index) {
+    public static Exceptional<Type> typeParameter(Class<?> type, int index) {
         return Exceptional.of(() -> {
             Type superClass = type.getGenericSuperclass();
             if (superClass instanceof Class<?>) {
@@ -839,5 +642,14 @@ public final class Reflect {
             }
             return ((ParameterizedType) superClass).getActualTypeArguments()[index];
         });
+    }
+
+    public static void prefix(String prefix) {
+        context().prefix(prefix);
+    }
+
+    public static void context(PrefixContext context) {
+        if (Reflect.context != null) throw new IllegalStateException("Cannot overwrite existing reflection context");
+        Reflect.context = context;
     }
 }
